--- a/src/Index.css
+++ b/src/Index.css
@@ -4,7 +4,6 @@
     box-sizing: border-box;
 }
 body{
-    display: inline;
     min-height: 100vh;
 }
 nav{
@@ -29,4 +28,39 @@ li>a{
     font-size: 18px;
     font-weight: bold;
     border-radius: 8px;
+}
+
+.card{
+    margin: 20px;
+}
+
+form{
+    background-color: rgba(192, 192, 192, 0.1);
+    margin: 10%;
+    align-items: center;
+}
+.name, .contact, .address, .socials{
+    display: flex;
+    flex-direction: column;
+    margin: 10px;
+    padding: 10px;
+    justify-content: space-between;
+}
+label{
+    font-size: 18px;
+    padding: 4px;
+}
+input{
+    font-size: 18px;
+    padding: 12px;
+    border-radius: 12px;
+    border: none;
+    width: 100%;
+}
+input[type=submit]{
+    width: 100%;
+    background-color: blue;
+    color: white;
+    font-size: 20px;
+    border: none;
 }
