--- a/src/Index.css
+++ b/src/Index.css
@@ -5,6 +5,7 @@
 }
 body{
     min-height: 100vh;
+    background-color: azure;
 }
 nav{
     display: flex;
@@ -32,6 +33,7 @@ li>a{
 
 .card{
     margin: 20px;
+    box-shadow: 5px 5px 5px 3px;
 }
 
 form{
@@ -63,4 +65,9 @@ input[type=submit]{
     color: white;
     font-size: 20px;
     border: none;
+}
+.contact-list{
+    display: flex;
+    margin: 10%;
+    justify-content: space-around;
 }
