--- a/src/Index.css
+++ b/src/Index.css
@@ -5,14 +5,17 @@
 }
 body{
     min-height: 100vh;
-    background-color: azure;
+    background-color: rgba(0, 0, 0, 0.7);
 }
 nav{
     display: flex;
     justify-content: space-between;
-    height: 70px;
+    height: 90px;
     background-color: silver;
-    padding: 10px;
+    padding: 15px;
+}
+.title{
+    color: white;
 }
 ul{
     display: flex;
@@ -37,7 +40,7 @@ li>a{
 }
 
 form{
-    background-color: rgba(192, 192, 192, 0.1);
+    background-color: rgba(192, 192, 192, 0.4);
     margin: 10%;
     align-items: center;
 }
@@ -74,4 +77,23 @@ input[type=submit]{
 
 .btn{
     margin: 0 6px 0 6px;
+}
+.deets{
+    border: 2px solid;
+    margin: 5%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.img-top{
+    width: 400px;
+    height: 400px;
+    padding: 12px;
+    object-fit: contain;
+}
+.text{
+    font-size: 20px;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    margin: 10px;
+    
 }
