--- a/src/Index.css
+++ b/src/Index.css
@@ -97,3 +97,12 @@ input[type=submit]{
 .btn-success{
     margin: 5px;
 }
+.edit-form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.edit-form>input{
+    margin: 7px;
+    width: 75%;
+}
