--- a/src/Index.css
+++ b/src/Index.css
@@ -115,3 +115,8 @@ input[type=submit]{
 .btn-danger{
     float: right;
 }
+.container {
+    border-radius: 5px;
+    background-color: rgba(192, 192, 192);
+    padding: 20px;
+}
