--- a/src/Index.css
+++ b/src/Index.css
@@ -8,15 +8,9 @@ body{
     background-image: url("https://brookesblogs.net/wp-content/uploads/2022/03/contactus.jpg");
     object-fit: cover;
 }
-nav{
-    display: flex;
-    justify-content: space-between;
-    height: 90px;
-    background-color: silver;
-    padding: 15px;
-}
+
 .title{
-    color: lightskyblue
+    color: white;
 }
 ul{
     display: flex;
@@ -45,7 +39,6 @@ li>a{
 form{
     background-color: rgba(192, 192, 192, 0.4);
     margin: 10%;
-    align-items: center;
 }
 .name, .contact, .address, .socials{
     display: flex;
