--- a/src/components/feedback.css
+++ b/src/components/feedback.css
@@ -6,7 +6,7 @@ body {
     box-sizing: border-box;
 }
 
-input[type=text],
+.feedback>input[type=text],
 select,
 textarea {
     width: 100%;
@@ -19,7 +19,7 @@ textarea {
     resize: vertical;
 }
 
-input[type=submit] {
+.feedback > input[type=submit] {
     background-color: #04AA6D;
     color: white;
     padding: 12px 20px;
@@ -28,12 +28,10 @@ input[type=submit] {
     cursor: pointer;
 }
 
-input[type=submit]:hover {
+.feedback > input[type=submit]:hover {
     background-color: #45a049;
 }
 
 .container {
     border-radius: 5px;
-    background-color: #f2f2f2;
-    padding: 20px;
 }
