--- a/src/components/feedback.css
+++ b/src/components/feedback.css
@@ -7,8 +7,8 @@ body {
 }
 
 .feedback>input[type=text],
-select,
-textarea {
+.feedback>select,
+.feedback>textarea {
     width: 100%;
     padding: 12px;
     border: 1px solid #ccc;
